small sound test works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(BAGEL
         mortal_Kombat.h
         mortal_kombat_info.h
         mortal_kombat_info_sprites.h
+        tests.h
 )
 
 add_subdirectory(lib/SDL)
@@ -28,6 +29,19 @@ target_link_libraries(BAGEL PUBLIC SDL3-static)
 
 add_subdirectory(lib/SDL_image)
 target_link_libraries(BAGEL PUBLIC SDL3_image-static)
+
+add_subdirectory(lib/SDL_mixer)
+target_link_libraries(BAGEL PUBLIC SDL3_mixer-static)
+
+#set(SDLMIXER_VENDORED ON)
+#add_subdirectory(lib/SDL_mixer)
+#target_link_libraries(BAGEL PUBLIC SDL3_mixer-static)
+#
+#target_include_directories(${PROJECT_NAME} PRIVATE
+#        ${PROJECT_SOURCE_DIR}/lib/SDL_mixer/include
+#        ${PROJECT_SOURCE_DIR}/lib/SDL_mixer/include/SDL3_mixer
+#)
+
 
 set(BOX2D_SAMPLES OFF)
 set(BOX2D_BENCHMARKS OFF)
